[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "dart_obs_gen"
version = "0.1.0"
description = "Generate non-overlapping DART obs_seq files from pluggable observation sources."
requires-python = ">=3.10"
dependencies = [
    "pyarrow",
    "dask[dataframe]",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["src"]
